src/test/deca/syntax/invalid/provided/no_returnType__methode.deca
//DESCRIPTION: Déclaration d'une méthode sans type de retour
class test{
  setx(){
	}  
}

